--- a/index.html
+++ b/index.html
@@ -666,10 +666,13 @@
 
       const name = "Ánh";
       const fullText = `
- Trên thiên đường có 10 thiên thần: 5 thiên thần đang chơi đùa,
- 4 thiên thần đang nói chuyện và 1 thiên thần đang đọc tin nhắn này…
- Đó chính là em đấy :))
- Chúc em 14/02 vui vẻ và nhận được nhiều điều ngọt ngào, ấm áp hôm nay!
+ Hôm nay 14/02, lời nhắn đầu tiên anh muốn gửi tới em
+ Chúc em có ngày lễ tình nhân thật ý nghĩa
+ Mong rằng em luôn vui vẻ và tự tin tỏa sáng theo cách riêng của mình
+ Chúc em luôn bình an, mạnh khỏe, vui vẻ, và hạnh phúc
+ Đừng cố gồng mình quá nhiều, những năm tháng qua em đã vất vả rồi
+ Hãy quên đi chuyện cũ, trân trọng hiện tại và yêu lấy bản thân mình
+ Cảm ơn em đã đọc hết tin nhắn này...
 `;
 
       const btn = document.getElementById("revealBtn");
@@ -776,3 +779,4 @@
     </script>
   </body>
 </html>
+
